--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -28,11 +28,64 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div class="container" >
       <!-- Timeblocks go here -->
-    </div>
+      
+      <!-- Time column -->
+      <div class="row" >
+          <div class="col-1 sm-1 list-group">
+                <li class="list-group-item hour">7AM </li>   
+                <li class="list-group-item hour">8AM </li>
+                <li class="list-group-item hour">9AM </li>
+                <li class="list-group-item hour">10AM </li>
+                <li class="list-group-item hour">11AM </li>
+                <li class="list-group-item hour">12PM </li>
+                <li class="list-group-item hour"> 1PM </li>
+                <li class="list-group-item hour"> 2PM </li>
+                <li class="list-group-item hour"> 3PM </li>
+                <li class="list-group-item hour"> 4PM </li>
+                <li class="list-group-item hour"> 5PM </li>
+                <li class="list-group-item hour"> 6PM </li>
+            </div>
+
+        <!-- Task column -->
+          <div class="col-10 sm-3 list-group">
+            <input type="text" class="list-group-item description" id="7">
+            <input type="text" class="list-group-item description" id="8">
+            <input type="text" class="list-group-item description" id="9">
+            <input type="text" class="list-group-item description" id="10">
+            <input type="text" class="list-group-item description" id="11">
+            <input type="text" class="list-group-item description" id="12">
+            <input type="text" class="list-group-item description" id="13">
+            <input type="text" class="list-group-item description" id="14">
+            <input type="text" class="list-group-item description" id="15">
+            <input type="text" class="list-group-item description" id="16">
+            <input type="text" class="list-group-item description" id="17">
+            <input type="text" class="list-group-item description" id="18">
+          </div>
+
+        <!-- Button column -->
+          <div class="col-1 sm-1 list-group">
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+            <button class="saveBtn list-group-item"><i class="fa-light fa-floppy-disk"></i></button>
+          </div>
+
+      <!-- done end  Timeblocks-->
+    </div>  <!-- end row -->
+
+</div>      <!-- end container -->
+    
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
